Check address balance

--- a/Trade_on_uniswap.ipynb
+++ b/Trade_on_uniswap.ipynb
@@ -121,12 +121,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 78,
    "id": "fa196e12-ee7d-4800-a971-68985a5b5a70",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: center;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>type</th>\n",
+       "      <th>attributes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>eth</td>\n",
+       "      <td>network</td>\n",
+       "      <td>{'name': 'Ethereum', 'coingecko_asset_platform...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>bsc</td>\n",
+       "      <td>network</td>\n",
+       "      <td>{'name': 'BNB Chain', 'coingecko_asset_platfor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>polygon_pos</td>\n",
+       "      <td>network</td>\n",
+       "      <td>{'name': 'Polygon POS', 'coingecko_asset_platf...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>avax</td>\n",
+       "      <td>network</td>\n",
+       "      <td>{'name': 'Avalanche', 'coingecko_asset_platfor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>movr</td>\n",
+       "      <td>network</td>\n",
+       "      <td>{'name': 'Moonriver', 'coingecko_asset_platfor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>defimetachain</td>\n",
+       "      <td>network</td>\n",
+       "      <td>{'name': 'DefiMetaChain', 'coingecko_asset_pla...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>humanode</td>\n",
+       "      <td>network</td>\n",
+       "      <td>{'name': 'Humanode', 'coingecko_asset_platform...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>mxc-zkevm</td>\n",
+       "      <td>network</td>\n",
+       "      <td>{'name': 'MXC zkEVM', 'coingecko_asset_platfor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>zkfair</td>\n",
+       "      <td>network</td>\n",
+       "      <td>{'name': 'ZKFair', 'coingecko_asset_platform_i...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>alveychain</td>\n",
+       "      <td>network</td>\n",
+       "      <td>{'name': 'AlveyChain', 'coingecko_asset_platfo...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         id         type                       attributes                    \n",
+       "0             eth  network  {'name': 'Ethereum', 'coingecko_asset_platform...\n",
+       "1             bsc  network  {'name': 'BNB Chain', 'coingecko_asset_platfor...\n",
+       "2     polygon_pos  network  {'name': 'Polygon POS', 'coingecko_asset_platf...\n",
+       "3            avax  network  {'name': 'Avalanche', 'coingecko_asset_platfor...\n",
+       "4            movr  network  {'name': 'Moonriver', 'coingecko_asset_platfor...\n",
+       "..            ...      ...                                                ...\n",
+       "95  defimetachain  network  {'name': 'DefiMetaChain', 'coingecko_asset_pla...\n",
+       "96       humanode  network  {'name': 'Humanode', 'coingecko_asset_platform...\n",
+       "97      mxc-zkevm  network  {'name': 'MXC zkEVM', 'coingecko_asset_platfor...\n",
+       "98         zkfair  network  {'name': 'ZKFair', 'coingecko_asset_platform_i...\n",
+       "99     alveychain  network  {'name': 'AlveyChain', 'coingecko_asset_platfo...\n",
+       "\n",
+       "[100 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_net = pd.DataFrame(networks_list_response[\"data\"])"
+    "df_net = pd.DataFrame(networks_list_response[\"data\"])\n",
+    "df_net"
    ]
   },
   {
@@ -1026,14 +1147,6 @@
    "source": [
     "#uniswap.make_trade_output(eth, usdt, 3 * 10**6, fee = 100)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e349093d-eec1-4541-af52-78bf649dc406",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
